test/Fail/LetInstance.err
LetInstance.agda:12.23-24: error: [InstanceNoCandidate]
No instance of type C A was found in scope.
when checking that the expression foo has type A
